force-app/main/default/objects/Inventory__c/fields/Model_Image__c.field-meta.xml
<CustomField>
    <fullName>Model_Image__c</fullName>
    <label>Model Image</label>
    <length>20</length>
    <type>Text</type>
</CustomField>