force-app/main/default/objects/Inventory__c/fields/Model_Variant__c.field-meta.xml
<CustomField>
    <fullName>Model_Variant__c</fullName>
    <description>Specifies the Model Variant(if any) of the product in inventory.</description>
    <label>Model Variant</label>
    <length>50</length>
    <type>Text</type>
</CustomField>