force-app/main/default/objects/Inventory__c/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <label>Order Number(DEPRECATED)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>