force-app/main/default/objects/Inventory__c/fields/Order_Number_Text__c.field-meta.xml
<CustomField>
    <fullName>Order_Number_Text__c</fullName>
    <label>Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>