force-app/main/default/objects/Inventory__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <label>Owner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dealership</fullName>
            </value>
            <value>
                <fullName>Consignment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>