force-app/main/default/objects/Inventory__c/fields/Part_Location__c.field-meta.xml
<CustomField>
    <fullName>Part_Location__c</fullName>
    <label>Part Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>