force-app/main/default/objects/Inventory__c/fields/Part_MSRP_Price__c.field-meta.xml
<CustomField>
    <fullName>Part_MSRP_Price__c</fullName>
    <label>Part MSRP Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>