force-app/main/default/objects/Inventory__c/fields/Payment_base_on_financing__c.field-meta.xml
<CustomField>
    <fullName>Payment_base_on_financing__c</fullName>
    <label>Payment base on financing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>