force-app/main/default/objects/Inventory__c/fields/Phone_holder__c.field-meta.xml
<CustomField>
    <fullName>Phone_holder__c</fullName>
    <label>Phone holder</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>