force-app/main/default/objects/Inventory__c/fields/Pre_sold_Account__c.field-meta.xml
<CustomField>
    <fullName>Pre_sold_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pre-sold Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Inventory (Pre-sold Account)</relationshipLabel>
    <relationshipName>Inventory1</relationshipName>
    <type>Lookup</type>
</CustomField>