force-app/main/default/objects/Inventory__c/fields/Production_Status__c.field-meta.xml
<CustomField>
    <fullName>Production_Status__c</fullName>
    <label>Production Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Need to Option and Color</fullName>
            </value>
            <value>
                <fullName>Need to Color</fullName>
            </value>
            <value>
                <fullName>Ready for Production</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>