force-app/main/default/objects/Inventory__c/fields/Refresh_Images_on_Website__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Images_on_Website__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Refresh Images on Website</label>
    <type>Checkbox</type>
</CustomField>