force-app/main/default/objects/Inventory__c/fields/Rigging_Cost__c.field-meta.xml
<CustomField>
    <fullName>Rigging_Cost__c</fullName>
    <label>Rigging Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>