force-app/main/default/objects/Inventory__c/fields/Running_gear__c.field-meta.xml
<CustomField>
    <fullName>Running_gear__c</fullName>
    <label>Running gear</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>