force-app/main/default/objects/Inventory__c/fields/Secondary_Status__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Status__c</fullName>
    <label>Secondary Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stock</fullName>
            </value>
            <value>
                <fullName>Presold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>