force-app/main/default/objects/Inventory__c/fields/Serial_Number_2__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number_2__c</fullName>
    <label>Serial Number 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>