force-app/main/default/objects/Inventory__c/fields/Speed_Wakeplate_levers__c.field-meta.xml
<CustomField>
    <fullName>Speed_Wakeplate_levers__c</fullName>
    <label>Speed/Wakeplate levers</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>