force-app/main/default/objects/Inventory__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>Contains the status of the product in Inventory.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ordered</fullName>
            </value>
            <value>
                <fullName>Pre-production</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>Transit</fullName>
            </value>
            <value>
                <fullName>Arrived</fullName>
            </value>
            <value>
                <fullName>Rigging</fullName>
            </value>
            <value>
                <fullName>Marketing Photos</fullName>
            </value>
            <value>
                <fullName>In Stock</fullName>
                <default>true</default>
                <label>In Stock</label>
            </value>
            <value>
                <fullName>Deposit</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
            <value>
                <fullName>Transit Factory</fullName>
            </value>
            <value>
                <fullName>Transit Raleigh</fullName>
            </value>
            <value>
                <fullName>Pre Sold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>