force-app/main/default/objects/Inventory__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status(DEPRECATED)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>