force-app/main/default/objects/Inventory__c/fields/Status_for_Curtailment_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Status_for_Curtailment_Start_Date__c</fullName>
    <formula>if(
	   Curtailment_Start_Date__c - Today() &lt;= 30 &amp;&amp; Curtailment_Start_Date__c - Today() &gt;=0, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156F00000CfLfV&quot;, &quot;Red&quot;),
	   if(
			Curtailment_Start_Date__c - Today() &gt; 30 &amp;&amp; Curtailment_Start_Date__c - Today() &lt;= 60, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156F00000CfLfW&quot;, &quot;Yellow&quot;),
			if(
				Curtailment_Start_Date__c - Today() &gt; 60, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156F00000CfLfU&quot;, &quot;Green&quot;),
				if(Curtailment_Start_Date__c - Today() &lt; 0, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156F00000CfLfT&quot;, &quot;Black&quot;),
					&quot;&quot;
				)
		    )
	   )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status for Curtailment Start Date</label>
    <type>Text</type>
</CustomField>