force-app/main/default/objects/Inventory__c/fields/Status_for_Days_on_the_Lot__c.field-meta.xml
<CustomField>
    <fullName>Status_for_Days_on_the_Lot__c</fullName>
    <formula>if(
	   Days_on_Lot__c &lt;= 90, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156F00000CfLfU&quot;, &quot;Green&quot;),
	   if(
			Days_on_Lot__c &gt; 90 &amp;&amp; Days_on_Lot__c &lt;= 180, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156F00000CfLfW&quot;, &quot;Yellow&quot;),
			if(
				Days_on_Lot__c &gt; 180 &amp;&amp; Days_on_Lot__c &lt;= 360, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156F00000CfLfV&quot;, &quot;Red&quot;),
				if(Days_on_Lot__c &gt;= 361, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156F00000CfLfT&quot;, &quot;Black&quot;),&quot;&quot;
				
				)
		    )
	   )
)</formula>
    <label>Status for Days on the Lot</label>
    <type>Text</type>
</CustomField>