force-app/main/default/objects/Inventory__c/fields/Status_for_Interest_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Status_for_Interest_Start_Date__c</fullName>
    <formula>if(
	   Interest_Start_Date__c - Today() &lt;= 30 &amp;&amp; Interest_Start_Date__c - Today() &gt;=0, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156F00000CfLfV&quot;, &quot;Red&quot;),
	   if(
			Interest_Start_Date__c - Today() &gt; 30 &amp;&amp; Interest_Start_Date__c - Today() &lt;= 60, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156F00000CfLfW&quot;, &quot;Yellow&quot;),
			if(
				Interest_Start_Date__c - Today() &gt; 60, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156F00000CfLfU&quot;, &quot;Green&quot;),
				if(Interest_Start_Date__c - Today() &lt; 0, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156F00000CfLfT&quot;, &quot;Black&quot;),
					&quot;&quot;
				)
		    )
	   )
)</formula>
    <label>Status for Interest Start Date</label>
    <type>Text</type>
</CustomField>