force-app/main/default/objects/Inventory__c/fields/Steering_wakeplate_controls__c.field-meta.xml
<CustomField>
    <fullName>Steering_wakeplate_controls__c</fullName>
    <label>Steering wakeplate controls</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>