force-app/main/default/objects/Inventory__c/fields/Steering_wheel_controls__c.field-meta.xml
<CustomField>
    <fullName>Steering_wheel_controls__c</fullName>
    <label>Steering wheel controls</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>