force-app/main/default/objects/Inventory__c/fields/Sub_Class_Pick_List__c.field-meta.xml
<CustomField>
    <fullName>Sub_Class_Pick_List__c</fullName>
    <label>Sub-Class Pick List</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Men&apos;s</fullName>
            </value>
            <value>
                <fullName>Women&apos;s</fullName>
            </value>
            <value>
                <fullName>Youth</fullName>
            </value>
            <value>
                <fullName>Handles</fullName>
            </value>
            <value>
                <fullName>Ropes</fullName>
            </value>
            <value>
                <fullName>Packages</fullName>
            </value>
            <value>
                <fullName>Wakesurf</fullName>
            </value>
            <value>
                <fullName>Bags</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Fins</fullName>
            </value>
            <value>
                <fullName>Ballast</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Tubes</fullName>
            </value>
            <value>
                <fullName>Water Toys</fullName>
            </value>
            <value>
                <fullName>Accessories</fullName>
            </value>
            <value>
                <fullName>Stomp Pads</fullName>
            </value>
            <value>
                <fullName>Leashes</fullName>
            </value>
            <value>
                <fullName>Kits</fullName>
            </value>
            <value>
                <fullName>Tools</fullName>
            </value>
            <value>
                <fullName>Wax</fullName>
            </value>
            <value>
                <fullName>Decks</fullName>
            </value>
            <value>
                <fullName>Trucks</fullName>
            </value>
            <value>
                <fullName>Wheels</fullName>
            </value>
            <value>
                <fullName>Bearings</fullName>
            </value>
            <value>
                <fullName>Griptape</fullName>
            </value>
            <value>
                <fullName>Completes</fullName>
            </value>
            <value>
                <fullName>Helmets</fullName>
            </value>
            <value>
                <fullName>Cleaning Kits</fullName>
            </value>
            <value>
                <fullName>Hoodies</fullName>
            </value>
            <value>
                <fullName>T-Shirts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>