force-app/main/default/objects/Inventory__c/fields/Suggested_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Suggested_List_Price__c</fullName>
    <label>Suggested List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>