force-app/main/default/objects/Inventory__c/fields/Surf_system__c.field-meta.xml
<CustomField>
    <fullName>Surf_system__c</fullName>
    <label>Surf system</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>