force-app/main/default/objects/Inventory__c/fields/Taxable__c.field-meta.xml
<CustomField>
    <fullName>Taxable__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Specifies whether the price of the item would be inclusive of taxes on Payment, or not.</inlineHelpText>
    <label>Taxable</label>
    <type>Checkbox</type>
</CustomField>