force-app/main/default/objects/Inventory__c/fields/Tied_Up_Cash__c.field-meta.xml
<CustomField>
    <fullName>Tied_Up_Cash__c</fullName>
    <formula>IF(RecordType.DeveloperName = &apos;Used_Boats&apos;,ACV_Floored_Difference__c + Min_ACV_Difference__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tied-Up Cash</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>