force-app/main/default/objects/Inventory__c/fields/Total_Dealer_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Dealer_Price__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Total Dealer Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>