force-app/main/default/objects/Inventory__c/fields/Total_Inventory_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Inventory_Cost__c</fullName>
    <formula>Quantity__c * Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Inventory Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>