force-app/main/default/objects/Inventory__c/fields/Total_Inventory_MSRP__c.field-meta.xml
<CustomField>
    <fullName>Total_Inventory_MSRP__c</fullName>
    <formula>Quantity__c * Part_MSRP_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Inventory MSRP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>