force-app/main/default/objects/Inventory__c/fields/Tower_speakers__c.field-meta.xml
<CustomField>
    <fullName>Tower_speakers__c</fullName>
    <label>Tower speakers</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>