force-app/main/default/objects/Inventory__c/fields/Trailer_Axles__c.field-meta.xml
<CustomField>
    <fullName>Trailer_Axles__c</fullName>
    <label>Trailer Axles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>