force-app/main/default/objects/Inventory__c/fields/Trailer_ID__c.field-meta.xml
<CustomField>
    <fullName>Trailer_ID__c</fullName>
    <label>Trailer ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>