force-app/main/default/objects/Inventory__c/fields/Trailer_License_Plate_Number__c.field-meta.xml
<CustomField>
    <fullName>Trailer_License_Plate_Number__c</fullName>
    <label>Trailer License Plate Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>