force-app/main/default/objects/Inventory__c/fields/Trailer_Make__c.field-meta.xml
<CustomField>
    <fullName>Trailer_Make__c</fullName>
    <label>Trailer Make</label>
    <length>255</length>
    <type>Text</type>
</CustomField>