force-app/main/default/objects/Inventory__c/fields/Trailer_VIN__c.field-meta.xml
<CustomField>
    <fullName>Trailer_VIN__c</fullName>
    <label>Trailer VIN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>