force-app/main/default/objects/Inventory__c/fields/Trailer_wheels__c.field-meta.xml
<CustomField>
    <fullName>Trailer_wheels__c</fullName>
    <label>Trailer wheels</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>