force-app/main/default/objects/Inventory__c/fields/Trailer_Year__c.field-meta.xml
<CustomField>
    <fullName>Trailer_Year__c</fullName>
    <label>Trailer Year</label>
    <length>5</length>
    <type>Text</type>
</CustomField>