force-app/main/default/objects/Inventory__c/fields/Transit_Expense__c.field-meta.xml
<CustomField>
    <fullName>Transit_Expense__c</fullName>
    <label>Transit Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>