force-app/main/default/objects/Inventory__c/fields/Transmission_Gearbox_SN__c.field-meta.xml
<CustomField>
    <fullName>Transmission_Gearbox_SN__c</fullName>
    <label>Transmission/Gearbox SN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>