force-app/main/default/objects/Inventory__c/fields/Transom__c.field-meta.xml
<CustomField>
    <fullName>Transom__c</fullName>
    <label>Transom</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>