force-app/main/default/objects/Inventory__c/fields/Transom_remote__c.field-meta.xml
<CustomField>
    <fullName>Transom_remote__c</fullName>
    <label>Transom remote</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>