force-app/main/default/objects/Inventory__c/fields/Underwater_lights__c.field-meta.xml
<CustomField>
    <fullName>Underwater_lights__c</fullName>
    <label>Underwater lights</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>