force-app/main/default/objects/Inventory__c/fields/Used_Boat_HRS__c.field-meta.xml
<CustomField>
    <fullName>Used_Boat_HRS__c</fullName>
    <label>Used Boat HRS</label>
    <length>30</length>
    <type>Text</type>
</CustomField>