force-app/main/default/objects/Inventory__c/fields/UsedBoatStatus__c.field-meta.xml
<CustomField>
    <fullName>UsedBoatStatus__c</fullName>
    <label>Used Boat Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inspection</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Cleaning</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Showroom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>