force-app/main/default/objects/Inventory__c/fields/Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Type__c</fullName>
    <label>Vehicle Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Runabout</fullName>
            </value>
            <value>
                <fullName>Ski Boat</fullName>
            </value>
            <value>
                <fullName>Pontoon</fullName>
            </value>
            <value>
                <fullName>Jet Ski</fullName>
            </value>
            <value>
                <fullName>Sailboat</fullName>
            </value>
            <value>
                <fullName>RV</fullName>
            </value>
            <value>
                <fullName>4 Wheeler</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>