force-app/main/default/objects/Inventory__c/fields/Walkthrough__c.field-meta.xml
<CustomField>
    <fullName>Walkthrough__c</fullName>
    <label>Walkthrough</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>