force-app/main/default/objects/Inventory__c/fields/Warranty_Engine_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Engine_End_Date__c</fullName>
    <formula>DATE( YEAR(  Warranty_Start_Date__c  ) +  Warranty_Engine_Term__c , MONTH( Warranty_Start_Date__c ), DAY( Warranty_Start_Date__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warranty Engine End Date</label>
    <type>Date</type>
</CustomField>