force-app/main/default/objects/Inventory__c/fields/Warranty_Engine_Term__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Engine_Term__c</fullName>
    <label>Warranty Engine Term</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>