force-app/main/default/objects/Inventory__c/fields/Warranty_Labor_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Labor_End_Date__c</fullName>
    <label>Warranty Labor End Date</label>
    <type>Date</type>
</CustomField>