force-app/main/default/objects/Inventory__c/fields/Warranty_Labor_End_Date_F__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Labor_End_Date_F__c</fullName>
    <formula>DATE( YEAR(  Warranty_Start_Date__c  ) +  Warranty_Labor_Term__c , MONTH( Warranty_Start_Date__c ), DAY( Warranty_Start_Date__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warranty Labor End Date</label>
    <type>Date</type>
</CustomField>