force-app/main/default/objects/Inventory__c/fields/Warranty_Parts_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Parts_End_Date__c</fullName>
    <label>Warranty Parts End Date</label>
    <type>Date</type>
</CustomField>