force-app/main/default/objects/Inventory__c/fields/Web_360_Video__c.field-meta.xml
<CustomField>
    <fullName>Web_360_Video__c</fullName>
    <label>Web 360 Video</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>