force-app/main/default/objects/Inventory__c/fields/Web_Boat_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Web_Boat_Hrs__c</fullName>
    <formula>Used_Boat_HRS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Web Boat Hrs</label>
    <type>Text</type>
</CustomField>