force-app/main/default/objects/Inventory__c/fields/Web_Boat_Length__c.field-meta.xml
<CustomField>
    <fullName>Web_Boat_Length__c</fullName>
    <description>This the length of the boat</description>
    <label>Web Boat Length</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>