force-app/main/default/objects/Inventory__c/fields/Web_Color__c.field-meta.xml
<CustomField>
    <fullName>Web_Color__c</fullName>
    <description>Color of the Boat Main and accent</description>
    <label>Web Color</label>
    <length>40</length>
    <type>Text</type>
</CustomField>