force-app/main/default/objects/Inventory__c/fields/Web_Condition__c.field-meta.xml
<CustomField>
    <fullName>Web_Condition__c</fullName>
    <label>Web Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Used</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>