force-app/main/default/objects/Inventory__c/fields/Web_Description__c.field-meta.xml
<CustomField>
    <fullName>Web_Description__c</fullName>
    <description>This is the Long Description of a boat on the Web</description>
    <label>Web Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>