force-app/main/default/objects/Inventory__c/fields/Web_Engine__c.field-meta.xml
<CustomField>
    <fullName>Web_Engine__c</fullName>
    <description>This is the Make of the Engine</description>
    <label>Web Engine</label>
    <length>30</length>
    <type>Text</type>
</CustomField>