force-app/main/default/objects/Inventory__c/fields/Web_Engine_HP__c.field-meta.xml
<CustomField>
    <fullName>Web_Engine_HP__c</fullName>
    <description>This is the horse power of the engine</description>
    <label>Web Engine HP</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>