force-app/main/default/objects/Inventory__c/fields/Web_Fuel_Type__c.field-meta.xml
<CustomField>
    <fullName>Web_Fuel_Type__c</fullName>
    <description>Gas that the boat takes</description>
    <label>Web Fuel Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>