force-app/main/default/objects/Inventory__c/fields/Web_Hull_Material__c.field-meta.xml
<CustomField>
    <fullName>Web_Hull_Material__c</fullName>
    <label>Web Hull Material</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fiberglass</fullName>
            </value>
            <value>
                <fullName>Wood</fullName>
            </value>
            <value>
                <fullName>Aluminum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>