force-app/main/default/objects/Inventory__c/fields/Web_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Web_Interest_Rate__c</fullName>
    <label>Web Interest Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>