force-app/main/default/objects/Inventory__c/fields/Web_Location__c.field-meta.xml
<CustomField>
    <fullName>Web_Location__c</fullName>
    <description>This is the City that the boat is Located in</description>
    <label>Web Location</label>
    <length>35</length>
    <type>Text</type>
</CustomField>