force-app/main/default/objects/Inventory__c/fields/Web_Make__c.field-meta.xml
<CustomField>
    <fullName>Web_Make__c</fullName>
    <formula>Manufacturer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Web Make</label>
    <type>Text</type>
</CustomField>