force-app/main/default/objects/Inventory__c/fields/Web_Model__c.field-meta.xml
<CustomField>
    <fullName>Web_Model__c</fullName>
    <formula>Model__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Web Model</label>
    <type>Text</type>
</CustomField>