force-app/main/default/objects/Inventory__c/fields/Web_MSRP__c.field-meta.xml
<CustomField>
    <fullName>Web_MSRP__c</fullName>
    <formula>Total_MSRP_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Web MSRP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>