force-app/main/default/objects/Inventory__c/fields/Web_Page_Name__c.field-meta.xml
<CustomField>
    <fullName>Web_Page_Name__c</fullName>
    <formula>LOWER(&apos;/product/&apos; &amp;  SUBSTITUTE(Web_Product_Name__c,&apos; &apos;,&apos;-&apos;)&amp;&apos;-&apos;&amp; Name &amp; &apos;/&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Web Page Name</label>
    <type>Text</type>
</CustomField>