force-app/main/default/objects/Inventory__c/fields/Web_Part_Description__c.field-meta.xml
<CustomField>
    <fullName>Web_Part_Description__c</fullName>
    <formula>Part__r.Web_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Web Part Description</label>
    <type>Text</type>
</CustomField>