force-app/main/default/objects/Inventory__c/fields/Web_Part_Name__c.field-meta.xml
<CustomField>
    <fullName>Web_Part_Name__c</fullName>
    <formula>Part__r.Web_Product_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Web Part Name</label>
    <type>Text</type>
</CustomField>