force-app/main/default/objects/Inventory__c/fields/Web_Part_Price__c.field-meta.xml
<CustomField>
    <fullName>Web_Part_Price__c</fullName>
    <formula>Part__r.Web_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Web Part Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>