force-app/main/default/objects/Inventory__c/fields/Web_Payment__c.field-meta.xml
<CustomField>
    <fullName>Web_Payment__c</fullName>
    <label>Web Payment(DEPRECATED)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>